--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,17 @@
     box-sizing: border-box;
 }
 
+body{
+    padding: 50px;
+}
+
 .container{
     max-width: 600px;
     margin: 0 auto;
     padding: 50px;
-    border: solid 1px #000;
+     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+}
+
+.form-group{
+    margin-bottom: 20px;
 }
